Update testimonials and FAQ sections in index.html

--- a/index.html
+++ b/index.html
@@ -312,15 +312,15 @@
       <div class="testimonials">
         <div class="testimonial">
           <div style="font-weight:700">A. & M. (Mumbai)</div>
-          <div class="small">“LagnaDuo showed us exactly why our routines clashed. We fixed two habits and our home became peaceful.”</div>
+          <div class="small">“LagnaDuo showed us exactly why our routines clashed.”</div>
         </div>
         <div class="testimonial">
-          <div style="font-weight:700">Jenny (UK)</div>
-          <div class="small">“I thought compatibility was enough — this report changed how we planned our move. Highly recommended.”</div>
+          <div style="font-weight:700">Leigh H. (Canada)</div>
+          <div class="small">“I thought personal compatibility was enough — this scorecard changed how we planned our move. Highly recommended.”</div>
         </div>
         <div class="testimonial">
-          <div style="font-weight:700">Carlos (US)</div>
-          <div class="small">“Fast, practical, and surprisingly accurate about our work schedules.”</div>
+          <div style="font-weight:700">Beatrix J. (US)</div>
+          <div class="small">“Fast, practical, and surprisingly accurate about our marriage.”</div>
         </div>
       </div>
     </section>
@@ -333,22 +333,22 @@
       </div>
       <div class="faq-item">
         <strong>What details do you need?</strong>
-        <p class="small">Exact birth date, time and place for both partners. If time is unknown, include the best estimate — we will note uncertainty in the report.</p>
+        <p class="small">Birth date, time and place for both partners. If time is unknown, include the best estimate. Birth details will be taken after payment.</p>
       </div>
       <div class="faq-item">
-        <strong>Is this suitable for same-sex couples?</strong>
-        <p class="small">Yes — the method is fully inclusive and based on energy patterns, not gender.</p>
+        <strong>Is this suitable for any two set of partners/couples irrespective of age, country, religion, race, creed or belief?</strong>
+        <p class="small">Yes — the method is fully inclusive and based on energy patterns not any of the above considerations.</p>
       </div>
       <div class="faq-item">
         <strong>Do you offer remedies?</strong>
-        <p class="small">Yes, each report includes actionable steps and simple remedies where required.</p>
+        <p class="small">LagnaDuo does not offer remedies. It only tells you the score as shown in sample PDF. For remedial measure you may directly contact the creator of LagnaDuo, Astrologer Partho Banerjee by clicking the "Contact" link at top left on this page.</p>
       </div>
     </section>
 
     <footer>
       <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap">
-        <div class="small">© Astrology of Bharat • LagnaDuo • All rights reserved</div>
-        <div class="small">Made with care — <a href="about_contact.html">Contact us</a></div>
+        <div class="small">© Partho Banerjee @ <a href="https://AstrologyOfBharat.org">Astrology of Bharat</a> • LagnaDuo • All rights reserved</div>
+        <div class="small">Contact author — <a href="about_contact.html">Contact</a></div>
       </div>
     </footer>
   </div>
