Hide email contact information
Comment out email contact information in the footer.

--- a/about_contact.html
+++ b/about_contact.html
@@ -187,8 +187,8 @@ In my eventful journey of more than a decade and half as practicing astrologer, 
           </form>
           
           <div style="margin-top: 20px; font-size: 13px; color: var(--muted); text-align: center;">
-            Or email directly:<br>
-            <a href="mailto:info@astrologyofbharat.org" style="color:var(--accent); text-decoration:none;">info@astrologyofbharat.org</a>
+            <!--Or email directly:<br>
+            <a href="mailto:info@astrologyofbharat.org" style="color:var(--accent); text-decoration:none;">info@astrologyofbharat.org</a>-->
           </div>
         </div>
       </aside>
