Update footer copyright information

--- a/about_contact.html
+++ b/about_contact.html
@@ -253,7 +253,7 @@ In my eventful journey of more than a decade and half as practicing astrologer, 
 
     <footer>
       <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap">
-        <div class="small">© Astrology of Bharat • LagnaDuo • All rights reserved</div>
+        <div class="small">© Partho Banerjee @ <a href="https://AstrologyOfBharat.org">Astrology of Bharat</a> • LagnaDuo • All rights reserved</div>
         <div class="small">Made with care — <a href="index.html" style="color:inherit; text-decoration: underline;">Home</a></div>
       </div>
     </footer>
