Change logo text from 'LB' to 'LD'

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">LB</div>
+        <div class="logo">LD</div>
         <div>
           <div class="site-title">Astrology of Bharat</div>
           <div class="small">LagnaDuo — Shared Future Scorecard</div>
