Rename 'Daily rhythm prediction' to 'Daily rhythm score'

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <tbody>
           <tr><td>Attraction / Synastry</td><td>Yes</td><td>Yes</td></tr>
           <tr><td>Living-together harmony</td><td>No</td><td>Yes</td></tr>
-          <tr><td>Daily rhythm prediction</td><td>No</td><td>Yes</td></tr>
+          <tr><td>Daily rhythm score</td><td>No</td><td>Yes</td></tr>
           <tr><td>Practical daily life matters</td><td>Limited</td><td>Detailed</td></tr>
           <tr><td>Deliverable</td><td>Reading</td><td>PDF scorecard</td></tr>
         </tbody>
