--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       </div>
       <div style="flex:1">
         <h3>What The Score Tells You</h3>
-        <ul class="small">
+        <ul class="small" style="font-size: 0.80rem;">
           <li>Overall Shared Future Score (0–250)</li>
           <li>Quantifies space-time harmony by house</li>
           <li>Potential for routines & rhythm merger</li>
