Add padding to 'What The Score Tells You' header

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </a>
       </div>
       <div style="flex:1">
-        <h3>What The Score Tells You</h3>
+        <h3 style="padding: 8px 10px;">What The Score Tells You</h3>
         <ul class="small" style="font-size: 0.825rem;">
           <li>Overall Shared Future Score (0–250)</li>
           <li>Quantifies space-time harmony by house</li>
