--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div style="display:flex;flex-direction:column;gap:8px;">
             <a class="buy-btn buy-local" id="cashfree" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
             <a class="buy-btn buy-int" id="paypal" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" target="_blank" rel="noopener noreferrer">Buy International — $15</a>
-            <div class="small">After purchase you will receive an instant PDF via email.</div>
+            <div class="small">After purchase you will receive an PDF scorecard via email in 24 hours, much often earlier.</div>
           </div>
         </div>
       </aside>
@@ -288,7 +288,7 @@
 
     <section id="buy" class="pricing fade-up">
       <div class="price-card">
-        <div class="small">Digital Instant Delivery</div>
+        <div class="small">Digital Delivery (E-Mail)</div>
         <div class="price">₹1100</div>
         <div class="small">One-time PDF report for shared living analysis (India)</div>
         <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
@@ -298,7 +298,7 @@
       <div class="price-card">
         <div class="small">International Purchase</div>
         <div class="price">$15</div>
-        <div class="small">Instant PDF delivered by email</div>
+        <div class="small">PDF delivered by E-mail within 24 hours, often much earlier</div>
         <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
           <a class="buy-btn buy-int" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" id="paypal-2" target="_blank" rel="noopener noreferrer">Buy (International) — Pay with PayPal</a>
         </div>
