Fix wording in purchase confirmation message

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div style="display:flex;flex-direction:column;gap:8px;">
             <a class="buy-btn buy-local" id="cashfree" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
             <a class="buy-btn buy-int" id="paypal" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" target="_blank" rel="noopener noreferrer">Buy International — $15</a>
-            <div class="small">After purchase you will receive an PDF scorecard via email in 24 hours, much often earlier.</div>
+            <div class="small">After purchase you will receive the PDF scorecard via email in 24 hours, much often earlier.</div>
           </div>
         </div>
       </aside>
