--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <button class="btn-ghost modal-close" style="background-color: #7c5cff; font-size: 0.9rem; color: white; padding:8px 16px; box-shadow:var(--shadow);border:0; cursor: pointer; font-weight: 600;">Close</button>
       </div>
       <div class="modal-body">
-        <img src="images/LagnaDuo_sample_score_covered_new1.jpg" alt="LagnaDuo Sample Report Full View">
+        <img src="images/LagnaDuo_sample_score_covered_new2.png" alt="LagnaDuo Sample Report Full View">
       </div>
       <div class="modal-footer">
         <div>Tip: This is the exact two-page PDF you will receive — concise, clear, and actionable.</div>
