--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     .buy-row{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
     .buy-btn{display:inline-flex;align-items:center;gap:10px;padding:12px 14px;border-radius:10px;border:0;font-weight:700;text-decoration:none}
     .buy-local{background:#0ea5b7;color:#fff}
-    .buy-int{background:#1f2937;color:#fff}
+    .buy-int{background:#0ea5b7;color:#fff}
     /* badges */
     .badge{display:inline-flex;align-items:center;padding:6px 10px;border-radius:999px;background:rgba(16,24,40,0.04);font-weight:600}
 
