--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
             <div id="live-karmic" class="small">Long-term destiny alignment present</div>
           </div>
           <div style="display:flex;flex-direction:column;gap:8px;">
-            <a class="buy-btn buy-local" id="cashfree" style="background-color: #6b9ac4; color: white;" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
-            <a class="buy-btn buy-int" id="paypal" style="background-color: #6b9ac4; color: white;" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" target="_blank" rel="noopener noreferrer">Buy International — $15</a>
+            <a class="buy-btn buy-local" id="cashfree" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
+            <a class="buy-btn buy-int" id="paypal" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" target="_blank" rel="noopener noreferrer">Buy International — $15</a>
             <div class="small">After purchase you will receive the PDF scorecard via email in 24 hours, much often earlier.</div>
           </div>
         </div>
@@ -292,7 +292,7 @@
         <div class="price">₹1100</div>
         <div class="small">One-time PDF report for shared living analysis (India)</div>
         <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
-          <a class="buy-btn buy-local" href="https://payments.cashfree.com/forms?code=LagnaDuo" id="cashfree-2" target="_blank" rel="noopener noreferrer">Buy (India) — Pay with Cashfree</a>
+          <a class="buy-btn buy-int" href="https://payments.cashfree.com/forms?code=LagnaDuo" id="cashfree-2" target="_blank" rel="noopener noreferrer">Buy (India) — Pay with Cashfree</a>
         </div>
       </div>
       <div class="price-card">
