--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
             <div id="live-karmic" class="small">Long-term destiny alignment present</div>
           </div>
           <div style="display:flex;flex-direction:column;gap:8px;">
-            <a class="buy-btn buy-local" id="cashfree" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy in India — ₹1100</a>
-            <a class="buy-btn buy-int" id="paypal" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" target="_blank" rel="noopener noreferrer">Buy International — $15</a>
+            <a class="buy-btn buy-local" id="cashfree" href="https://payments.cashfree.com/forms?code=LagnaDuo" target="_blank" rel="noopener noreferrer">Buy (India) — ₹1100</a>
+            <a class="buy-btn buy-int" id="paypal" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" target="_blank" rel="noopener noreferrer">Buy (International) — $15</a>
             <div class="small">After purchase you will receive the PDF scorecard via email in 24 hours, much often earlier.</div>
           </div>
         </div>
@@ -290,18 +290,20 @@
       <div class="price-card">
         <div class="small">Digital Delivery (E-Mail)</div>
         <div class="price">₹1100</div>
-        <div class="small">One-time PDF report for shared living analysis (India)</div>
+        <div class="small">Pay via UPI (PayTm, GPay, PhonePe), IFSC Bank transfer</div>
         <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
           <a class="buy-btn buy-int" href="https://payments.cashfree.com/forms?code=LagnaDuo" id="cashfree-2" target="_blank" rel="noopener noreferrer">Buy (India) — Pay with Cashfree</a>
         </div>
+        <div class="small">PDF delivered by E-mail within 24 hours, often much earlier</div>
       </div>
       <div class="price-card">
         <div class="small">International Purchase</div>
         <div class="price">$15</div>
-        <div class="small">PDF delivered by E-mail within 24 hours, often much earlier</div>
+        <div class="small">Pay via PayPal secure checkout</div>
         <div style="margin-top:12px;display:flex;gap:8px;align-items:center">
           <a class="buy-btn buy-int" style="background-color: #6b9ac4; color: white;" href="https://www.paypal.com/ncp/payment/T8PX5CSKCEJYS" id="paypal-2" target="_blank" rel="noopener noreferrer">Buy (International) — Pay with PayPal</a>
         </div>
+        <div class="small">PDF delivered by E-mail within 24 hours, often much earlier</div>
       </div>
       <div style="flex-basis:100%"></div>
       <div style="margin-top:12px;font-size:13px;color:var(--muted)">Note: Click the Buy button to complete the secure checkout. After purchase, you’ll receive the PDF and instructions by email. For any issues, contact us at <a href="mailto:info@astrologyofbharat.org">info@astrologyofbharat.org</a>.</div>
