--- a/about_contact.html
+++ b/about_contact.html
@@ -173,6 +173,7 @@
         </p>
 
         <h2>About the Author</h2>
+        <p><img src="images/Author_Partho_Banerjee_LagnaDuo.jpg" alt="Author: Partho Banerjee" style="border-radius: 20px; border: none;"  ></p>
         <p>
           Partho Banerjee is a Jyotishi or Vedic astrologer as popularly called these days, as well as passionate applications software expert dedicated to making actionable Jyotish tools accessible to all.
 
