--- a/about_contact.html
+++ b/about_contact.html
@@ -156,7 +156,7 @@
 
     <div class="page-grid fade-up">
       
-      <section class="about-content">
+      <section class="about-content" style="text-align: justify;">
         <h1>About Us</h1>
         <p class="small" style="margin-bottom: 24px;">Understanding destiny, one chart at a time.</p>
         
@@ -188,7 +188,7 @@ This Astrology software is created, owned, managed and maintained by Partho Bane
 In my eventful journey of more than a decade and half as practicing astrologer, I have done consultations for people from different walks of life across various cultures and countries (thanks to the internet).
         </p>
         <p>
-        If you wish to know more about my astrology journey or want to connect with the astrologer in me, here is my astrology page☞ AstrologyOfBharat.org
+        If you wish to know more about my astrology journey or want to connect with the astrologer in me, here is my astrology page☞ <a href="https://AstrologyOfBharat.org">AstrologyOfBharat.org<a/>
         </p>
       </section>
 
