--- a/about_contact.html
+++ b/about_contact.html
@@ -157,6 +157,7 @@
     <div class="page-grid fade-up">
       
       <section class="about-content">
+        <div style="text-align: justify;">
         <h1>About Us</h1>
         <p class="small" style="margin-bottom: 24px;">Understanding destiny, one chart at a time.</p>
         
@@ -190,6 +191,7 @@ In my eventful journey of more than a decade and half as practicing astrologer, 
         <p>
         If you wish to know more about my astrology journey or want to connect with the astrologer in me, here is my astrology page☞ <a href="https://AstrologyOfBharat.org">AstrologyOfBharat.org<a/>
         </p>
+        </div>
       </section>
 
       <aside class="contact-section">
