--- a/index.html
+++ b/index.html
@@ -516,8 +516,11 @@
         Close
       </button>
     </div>
-
+    
     <div class="modal-body" style="text-align:left; font-size:15px; line-height:1.55;">
+      <p>LagnaDuo transforms ancient Vedic astrology into a modern relationship intelligence system. Instead of limiting itself to “compatibility,” it examines the entire life you will share—all 12 houses, every planet, and how both of your Lagna-driven life patterns merge under one roof.</p>
+      <p>LagnaDuo begins at the true starting point of both lives: the Lagna (Ascendant). From here, every one of the 12 houses unfolds its story—how you handle family, finances, fun, responsibilities, emotions, home, and challenges. When two people live together, every house comes into play, not just the 7th.</p>
+      <p>It maps how each planet influences each house in both charts, revealing how your energies interact when you share a space, a timeline, and a future. Family. Communication. Home. Joy. Challenges. Growth. Support. Real relationships involve all of it—and so does LagnaDuo. It is the first scorecard designed to reveal not just how two people attract each other… but how two lives actually work together. </p>
       <p>
         LagnaDuo calculates the <strong>Shared Future Score</strong> (0–250) based on 
         Vedic astrology principles that measure:
