--- a/about_contact.html
+++ b/about_contact.html
@@ -178,7 +178,7 @@
         <p>
           Partho Banerjee is a Jyotishi or Vedic astrologer as popularly called these days, as well as passionate applications software expert dedicated to making actionable Jyotish tools accessible to all.
 
-This Astrology software is created, owned, managed and maintained by Partho Banerjee, that’s me. LagnaOne is designed to grow for and with the Jyotish community.
+This Astrology software is created, owned, managed and maintained by Partho Banerjee, that’s me. LagnaDuo is designed to fill the gap between ancient wisdom and 21st century dynamics of relationships.
         </p>
         <p>
           My journey in IT: I have been a full time IT and software professional for 14 years and have done Master's in Computer Applications. I am certified corporate IT trainer by Indian Institute of Technology (IIT) Kanpur, India and IBM Corporation. I have worked with leading IT companies in banking and financial services domain at global cities including London, Singapore, Mumbai, Copenhagen, Hong Kong etc.
