--- a/about_contact.html
+++ b/about_contact.html
@@ -159,7 +159,7 @@
       <section class="about-content">
         <div style="text-align: justify;">
         <h1>About Us</h1>
-        <p class="small" style="margin-bottom: 24px;">Understanding destiny, one chart at a time.</p>
+        <p class="small" style="margin-bottom: 24px;">Journey of destiny in time, one chart at a time.</p>
         
         <hr style="border: 0; border-top: 1px solid rgba(0,0,0,0.06); margin-bottom: 30px;">
         <h2>About LagnaDuo<sup>TM</sup></h2>
@@ -173,10 +173,10 @@
           LagnaDuo<sup>TM</sup> is a specialized scorecard designed to bridge this gap. It utilizes a unique algorithm based on the Ascendant (Lagna) and house superimposition to predict the harmony of a shared environment. It answers the question: <em>"Can we live in the same house without driving each other crazy?"</em> It is a tool for the modern couple who wants to build a home that is not just loving, but peaceful.
         </p>
 
-        <h2>About the Author</h2>
+        <h2>About Author</h2>
         <p><img src="images/Author_Partho_Banerjee_LagnaDuo.jpg" alt="Author: Partho Banerjee" style="border-radius: 20px; border: none;"  ></p>
         <p>
-          Partho Banerjee is a Jyotishi or Vedic astrologer as popularly called these days, as well as passionate applications software expert dedicated to making actionable Jyotish tools accessible to all.
+          <strong>Partho Banerjee</strong>, author and creator of LagnaDuo is a Vedic (Indian) astrologer with two decades of experience as well as passionate applications software professional dedicated to making actionable Jyotish (astrology) tools accessible to all.
 
 This Astrology software is created, owned, managed and maintained by Partho Banerjee, that’s me. LagnaDuo is designed to fill the gap between ancient wisdom and 21st century dynamics of relationships.
         </p>
